--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -5,5 +5,17 @@
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
     <string name="sonar2">Sonar2:</string>
+    <string name="hbdiff">Head&#38;Bear Diff:</string>
+    <string name="cd_prompt">Display image type</string>
+    <string-array name="cd_arrays">
+        <item>mRgba</item>
+        <item>mGrayImage</item>
+        <item>mContrastImage</item>
+        <item>mGradientImage</item>
+        <item>mBinaryImage</item>
+        <item>mDilatedMask</item>
+    </string-array>
+    <string name="displayAlpha">&#x3B1;:</string>
+    <string name="displayBeta">&#x3B2;:</string>
 
 </resources>
